--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Here's a quick summary of the required technologies:</p>
 <li>
 <a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a>: This is the API used to manipulate audio and video data inside the browser. It is currently fully implemented in Chrome and only partially in Firefox Nightly.</li>
 <li>
-<a href="http://asmjs.org/">asm.js</a>: This is the technology used to optimize the mp3 encoder. It is currently only supported by Firefox.</li>
+<a href="http://asmjs.org/">asm.js</a>: This is the technology used to optimize the mp3 encoder. It is currently only supported by Firefox though Chrome is starting to show good performances with it.</li>
 </ul><h3>
 <a name="how-to-test" class="anchor" href="#how-to-test"><span class="octicon octicon-link"></span></a>How to test?</h3>
 
