Added live client!

--- a/index.html
+++ b/index.html
@@ -113,13 +113,7 @@ Here's a quick summary of the required technologies:</p>
 <h4>
 <a name="client" class="anchor" href="#client"><span class="octicon octicon-link"></span></a>Client</h4>
 
-<p>The <code>examples/client/</code> directory of this repository contains a client example, sending mp3 encoded data, using 
-<a href="https://github.com/savonet/shine/tree/master/js">libshine.js</a> or raw PCM data.</p>
-
-<p>You can start the client by executing <code>make</code> in the repository. You will need a functional <code>python</code> binary 
-with the <code>SimpleHTTPServer</code> module.</p>
-
-<p>Once started, you can point your browser to <a href="http://localhost:8000/">http://localhost:8000/</a>.</p>
+<p>You can run the test client by following <a href="client/index.html">this link</a>.
 
 <h4>
 <a name="server" class="anchor" href="#server"><span class="octicon octicon-link"></span></a>Server</h4>
