Link to latest master code.

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 <title>Webcast Test Client</title>
-<script src="jquery.js"></script>
-<script src="libshine.js"></script>
-<script src="libmad.js"></script>
-<script src="taglib.js"></script>
-<script src="libsamplerate.js"></script>
-<script src="webcast.js"></script>
-<script src="client.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/examples/client/libshine.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/examples/client/libmad.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/examples/client/taglib.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/examples/client/libsamplerate.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/lib/webcast.js"></script>
+<script src="https://rawgithub.com/webcast/webcast.js/master/examples/client/client.js"></script>
 
 <h2>Webcast Test Client</h2>
 Encoder:
