--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Here's a quick summary of the required technologies:</p>
 <h4>
 <a name="client" class="anchor" href="#client"><span class="octicon octicon-link"></span></a>Client</h4>
 
-<p>You can run the test client by following <a href="client/index.html">this link</a>.
+<p>You can run the test client by following <a href="client">this link</a>.
 
 <h4>
 <a name="server" class="anchor" href="#server"><span class="octicon octicon-link"></span></a>Server</h4>
