--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ if (inputSampleRate !== 44100) {
 if (useWorker) {
   encoder = new Webcast.Encoder.Asynchronous({
     encoder: encoder,
-    scripts: [(...], // full path to required scripts for the worker.
-                     // usually includes requires encoders and webcast.js 
+    // full path to scripts required for the worker.
+    // usually includes requires encoders and webcast.js
+    scripts: ["http://bla.com/webcast.js", ...] 
   });
 }
 
