--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Here's a quick summary of the required technologies:</p>
 <li>
 <a href="http://www.w3.org/TR/2011/WD-websockets-20110929/">WebSocket API</a>: This is the transport layer. It is readily available in most modern browsers.</li>
 <li>
-<a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a>: This is the API used to manipulate audio and video data inside the browser. It is currently fully implemented in Chrome and only partially in Firefox Nightly.</li>
+<a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">Web Audio API</a>: This is the API used to manipulate audio and video data inside the browser. It is currently implemented in Chrome and in <a href="http://nightly.mozilla.org/">Firefox Nightly</a>.</li>
 <li>
 <a href="http://asmjs.org/">asm.js</a>: This is the technology used to optimize the mp3 encoder. It is currently only supported by Firefox though Chrome is starting to show good performances with it.</li>
 </ul><h3>
